# .everywhere

./: .gitignore  README.md  TODO.md  package.json  pyproject.toml
docs/: ONBOARDING.md  PROJECT.md
everywhere/: __init__.py  check.py  cli.py  feishu_bridge.py  install.py
scripts/: feishu_bridge.py  install.py  update-from-git.sh
skills/everywhere/: .skillignore  SKILL.md
skills/everywhere/agents/: openai.yaml
tests/: run_feishu_bridge_tests.py  test_feishu_bridge.py
